--- a/MireaProject/app/build.gradle
+++ b/MireaProject/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation libs.lifecycle.viewmodel.ktx
     implementation libs.navigation.fragment
     implementation libs.navigation.ui
+    implementation 'androidx.work:work-runtime:2.9.0'
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
