add: files to Lesson8 MireaProject

--- a/MireaProject/app/src/main/AndroidManifest.xml
+++ b/MireaProject/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -24,7 +27,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MireaProject"
+        android:name=".ui.lesson8.App"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.lesson8.MapActivity"
+            android:exported="true"/>
         <activity
             android:name=".ui.lesson7.Authentication"
             android:exported="true">
