--- a/MireaProject/app/build.gradle
+++ b/MireaProject/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.9.0'
     implementation libs.activity
     implementation libs.firebase.auth
+    implementation 'com.yandex.android:maps.mobile:4.3.1-full'
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
