--- a/FreshChef/data/build.gradle
+++ b/FreshChef/data/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.android.library)
+    alias(libs.plugins.google.gms.google.services)
 }
 
 android {
@@ -28,6 +29,7 @@ android {
 dependencies {
 
     implementation libs.appcompat
+    implementation libs.firebase.auth
     implementation project(':domain')
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
