upd: FreshChef with Retrofit

--- a/FreshChef/data/build.gradle
+++ b/FreshChef/data/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation project(':domain')
     implementation libs.androidx.room.common
     implementation libs.androidx.room.runtime
+    implementation("com.squareup.retrofit2:retrofit:2.11.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.11.0")
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     annotationProcessor libs.androidx.room.compiler
