--- a/FreshChef/app/build.gradle
+++ b/FreshChef/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation libs.androidx.room.common
     implementation project(':data')
     implementation project(':domain')
+    implementation 'com.squareup.picasso:picasso:2.8'
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
